--- a/hyperion_app/pubspec.yaml
+++ b/hyperion_app/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  collection: ^1.17.2
+  collection:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
